--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,19 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TabHost xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@android:id/tabhost"
+    android:id="@+id/tabHost"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-    <LinearLayout
-        android:orientation="vertical"
+    android:layout_height="fill_parent" >
+
+    <TabWidget
+        android:id="@android:id/tabs"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
-        <TabWidget
-            android:id="@android:id/tabs"
+        android:layout_height="wrap_content" />
+
+    <FrameLayout
+        android:id="@android:id/tabcontent"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" >
+
+        <!-- Intro tab -->
+        <LinearLayout
+            android:id="@+id/tab1"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
-        <FrameLayout
-            android:id="@android:id/tabcontent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingTop="60dp" >
+
+            <TextView
+                android:id="@+id/txt1"
+                android:layout_width="fill_parent"
+                android:layout_height="100dp"
+                android:text="This is tab1" />
+        </LinearLayout>
+
+        <!-- Events tab -->
+        <LinearLayout
+            android:id="@+id/tab2"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"/>
-    </LinearLayout>
+            android:layout_height="fill_parent"
+            android:orientation="vertical"
+            android:paddingTop="60dp" >
+
+            <TextView
+                android:id="@+id/txt2"
+                android:layout_width="fill_parent"
+                android:layout_height="100dp"
+                android:text="This is tab 2" />
+        </LinearLayout>
+
+        <!-- Contacts tab -->
+        <LinearLayout
+            android:id="@+id/tab3"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical"
+            android:paddingTop="60dp" >
+
+            <TextView
+                android:id="@+id/txt3"
+                android:layout_width="fill_parent"
+                android:layout_height="100dp"
+                android:text="This is tab 3" />
+        </LinearLayout>
+        
+        <!-- Prayer tab -->
+        <LinearLayout
+            android:id="@+id/tab4"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical"
+            android:paddingTop="60dp" >
+
+            <TextView
+                android:id="@+id/txt4"
+                android:layout_width="fill_parent"
+                android:layout_height="100dp"
+                android:text="This is tab 4" />
+        </LinearLayout>
+        
+        <!-- Verse tab -->
+        <LinearLayout
+            android:id="@+id/tab5"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical"
+            android:paddingTop="60dp" >
+
+            <TextView
+                android:id="@+id/5"
+                android:layout_width="fill_parent"
+                android:layout_height="100dp"
+                android:text="This is tab 5" />
+        </LinearLayout>
+    </FrameLayout>
+
 </TabHost>
