--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -15,9 +15,10 @@
         android:layout_height="fill_parent" >
 
         <!-- Intro tab -->
+
         <LinearLayout
             android:id="@+id/tab1"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingTop="60dp" >
@@ -45,7 +46,7 @@
                 android:text="@string/event" />
         </LinearLayout>
 
-        <!-- Contacts tab -->
+        <!-- Contacts/Location tab -->
         <LinearLayout
             android:id="@+id/tab3"
             android:layout_width="fill_parent"
@@ -58,6 +59,14 @@
                 android:layout_width="fill_parent"
                 android:layout_height="100dp"
                 android:text="@string/contact" />
+            
+            <ImageButton 
+                android:id="@+id/imageButton1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/iucover"
+                android:scaleType="centerInside" />
+            
         </LinearLayout>
         
         <!-- Prayer tab -->
